crates/claptrap-core/tests/snapshots/tests__arg__required_if_eq-case_sensitive.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_other='SPECIAL'
