crates/claptrap-core/tests/snapshots/tests__arg__required_if_eq_all-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_option='spec'
