crates/claptrap-core/tests/snapshots/tests__arg__required_unless_present_all-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_dbg='true'
claptrap_infile='file'
