crates/claptrap-core/tests/snapshots/tests__arg__requires_ifs-present1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_config='file.conf'
claptrap_input='in.txt'
claptrap_output='out.txt'
